# Performance_TestExecution-Reporting

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  RUNBOOK.md  TRD.md  start_mcp_server.ps1
.github/: AI_COLLABORATION_GUIDE.md  AI_DEVELOPMENT_STANDARDS.md  BEFORE_EACH_COMMIT.md  BEFORE_EACH_FEATURE.md  PROJECT_KICKOFF_CHECKLIST.md  copilot-instructions.md
__QUEUE__/: 19-05-53_GET_RO_Number_Load_kacy7v.json  19-20-55_Inspect_JmeLoadtest_o8wr7l.json
mcp-scripts/: 01_validate_env.ps1  02_start_server.ps1  03_run_tests.ps1
mcp-server/: .env.example  pyproject.toml
mcp-server/src/perf_mcp/: __init__.py  jtl_parser.py  models.py  notifier.py  report_generator.py  server.py
mcp-server/tests/: test_jtl_parser.py  test_models.py  test_notifier.py  test_report_generator.py
vm-runner/: jmeter_runner.ps1
