[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perf-mcp"
version = "1.0.0"
description = "MCP server for JMeter test orchestration, monitoring, and performance reporting"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
perf-mcp = "perf_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/perf_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/perf_mcp"]
omit = ["tests/*"]
